# SIPAI

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CMakeLists.txt  CMakeSettings.json  Dockerfile_env  LICENSE  README.md  version.rc
.github/: FUNDING.yml
.github/workflows/: codeql.yml  covdoc.yml  main.yml
api/: ActivationFunctions_8h.html  ActivationFunctions_8h_source.html  AppParams_8h.html  AppParams_8h_source.html  Common_8h.html  Common_8h_source.html  Connexion_8h.html  Connexion_8h_source.html  DataList_8h.html  DataList_8h_source.html  Data_8h.html  Data_8h_source.html  EmptyCellException_8h.html  EmptyCellException_8h_source.html  FileReaderException_8h.html  FileReaderException_8h_source.html  HiddenLayer_8h.html  HiddenLayer_8h_source.html  ImageExportException_8h.html  ImageExportException_8h_source.html  ImageExport_8h.html  ImageExport_8h_source.html  ImageHelperException_8h.html  ImageHelperException_8h_source.html  ImageHelper_8cpp.html  ImageHelper_8h.html  ImageHelper_8h_source.html  ImageImportException_8h.html  ImageImportException_8h_source.html  ImageImport_8h.html  ImageImport_8h_source.html  Image_8h.html  Image_8h_source.html  ImportExportException_8h.html  ImportExportException_8h_source.html  InputLayer_8h.html  InputLayer_8h_source.html  LayerHidden_8h.html  LayerHidden_8h_source.html  LayerInput_8h.html  (+334 more)
api/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_e.js  defines_0.js  enums_0.js  enums_1.js  (+78 more)
cmd/: .pre-commit-config.yaml  CMakeLists.txt  Main.cpp  SIPAI.cpp
cmd/include/: CLI11.hpp  SIPAI.h
coverage/: coverage.json  lcov.info
coverage/html/: index-sort-f.html  index-sort-l.html  index.html
coverage/html/include/: ActivationFunctions.h.func-sort-c.html  ActivationFunctions.h.func.html  ActivationFunctions.h.gcov.html  Common.h.func-sort-c.html  Common.h.func.html  Common.h.gcov.html  Connexion.h.func-sort-c.html  Connexion.h.func.html  Connexion.h.gcov.html  HiddenLayer.h.func-sort-c.html  HiddenLayer.h.func.html  HiddenLayer.h.gcov.html  Image.h.func-sort-c.html  Image.h.func.html  Image.h.gcov.html  ImageHelper.h.func-sort-c.html  ImageHelper.h.func.html  Layer.h.func.html  (+78 more)
data/glsl/: EnhancerShader-forward1.comp.in  EnhancerShader-forward2.comp.in  EnhancerShader.comp.in  TrainingShader-TODELETE.comp.in  TrainingShader-backward1.comp.in  TrainingShader-backward2.comp.in  TrainingShader-backward3.comp.in  TrainingShader-backward4.comp.in  TrainingShader-forward1.comp.in  TrainingShader-forward2.comp.in  TrainingShader-forward3.comp.in  TrainingShader-forward4.comp.in  TrainingShader-init.comp.in  TrainingShader.comp.in  VertexShader.vert
doc/: Doxyfile
gui/: BindingAppParams.cpp  BindingNetworkParams.cpp  Bindings.cpp  CMakeLists.txt  Main.cpp  MainWindow.cpp  MainWindow.ui  NetworkLoader.cpp  icons.qrc
gui/include/: BindingAppParams.h  BindingNetworkParams.h  Bindings.h  MainWindow.h  NetworkLoader.h  QtSimpleLogger.h  SimpleLoggerCallback.h
libs/: CMakeLists.txt
libs/libcsvparser/: CMakeLists.txt
libs/libjson/: CMakeLists.txt
libs/libsipai/: CMakeLists.txt
libs/libsipai/include/: ActivationFunctions.h  AppParameters.h  AppParams.h  Common.h  Connexion.h  Data.h  DataList.h  HiddenLayer.h  Image.h  ImageExport.h  ImageHelper.h  ImageImport.h  InputLayer.h  Layer.h  LayerHidden.h  LayerInput.h  LayerOutput.h  Manager.h  Network.h  NetworkParameters.h  NeuralNetwork.h  NeuralNetworkBuilder.h  NeuralNetworkImportExport.h  NeuralNetworkImportExportCSV.h  NeuralNetworkImportExportFacade.h  NeuralNetworkImportExportJSON.h  NeuralNetworkParams.h  Neuron.h  NeuronConnection.h  NeuronConnexion.h  OutputLayer.h  RGBA.h  RandomFactory.h  RunnerEnhancerOpenCVVisitor.h  RunnerEnhancerVisitor.h  RunnerEnhancerVulkanVisitor.h  RunnerTrainingMonitoredVisitor.h  RunnerTrainingOpenCVVisitor.h  RunnerTrainingVisitor.h  RunnerTrainingVulkanVisitor.h  (+11 more)
libs/libsipai/include/exception/: EmptyCellException.h  FileReaderException.h  ImageExportException.h  ImageHelperException.h  ImageImportException.h  ImportExportException.h  ManagerException.h  NetworkException.h  NeuralNetworkException.h  RunnerVisitorException.h  TrainingDataFactoryException.h  VulkanBuilderException.h  VulkanControllerException.h  VulkanHelperException.h
libs/libsipai/src/: ImageHelper.cpp  Layer.cpp  LayerOutput.cpp  Manager.cpp  Network.cpp  NetworkImportExport.cpp  NetworkImportExportCSV.cpp  NetworkImportExportFacade.cpp  NetworkImportExportJSON.cpp  NeuralNetwork.cpp  NeuralNetworkBuilder.cpp  RandomFactory.cpp  RunnerEnhancerOpenCVVisitor.cpp  RunnerEnhancerVisitor.cpp  RunnerEnhancerVulkanVisitor.cpp  RunnerTrainingMonitoredVisitor.cpp  RunnerTrainingOpenCVVisitor.cpp  RunnerTrainingVisitor.cpp  RunnerTrainingVulkanVisitor.cpp  RunnerVisitorFactory.cpp  TrainingDataFactory.cpp  TrainingDataFileReaderCSV.cpp  TrainingDataReader.cpp  TrainingMonitoredVisitor.cpp  VulkanBuilder.cpp  VulkanController.cpp  VulkanHelper.cpp
scripts/: enhance.sh  gprof.sh  release.sh  train.bat  train.sh  train_fast_test.sh
src/: Main.cpp  SIPAI.cpp
src/include/: CLI11.hpp  SIPAI.h
test/: CMakeLists.txt  copy_directory.cmake
test/ctests/: CMakeLists.txt  images-test1.csv
test/data/: images-test1.csv
test/data/shaders/: shader_test1.comp  shader_test2.comp  trainingShader_test.comp
test/doctests/: CMakeLists.txt  TestActivationFunctions.cpp  TestCommon.cpp  TestExceptions.cpp  TestImageHelper.cpp  TestLayer.cpp  TestLogger.cpp  TestManager.cpp  TestRGBA.cpp  TestRunnerEnhancerVisitor.cpp  TestRunnerTrainingMonitorVisitor.cpp  TestRunnerTrainingOpenCVVisitor.cpp  TestVulkanController.cpp  VulkanControllerTest.cpp  images-test1.csv
test/doctests/include/: VulkanControllerTest.h
(+109 files in other folders)
